# kick-py

./: .gitignore  KICK_SIGNUP_FLOW.md  LICENSE  README.md  create_accounts.py  mass_create.py  mass_signup.py  pyproject.toml  signup_browser.py
kick_sdk/: __init__.py  auth.py  batch.py  client.py  email_utils.py  kasada_solver.py  models.py  session.py  signup.py
kick_sdk/api/: __init__.py  channels.py  chat.py  livestreams.py  users.py
kick_sdk/websocket/: __init__.py  pusher.py
tests/: __init__.py  test_integration.py  test_sdk.py
