[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kick-sdk"
version = "0.2.0"
description = "Pure Python client for the Kick.com API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "3z", email = "dev@3z.sh"}
]
keywords = ["kick", "kick.com", "streaming", "api", "sdk", "livestream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "tls_client>=1.0",
    "websocket-client>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.40",
    "imapclient>=3.0",
]

[project.urls]
Homepage = "https://github.com/3z/kick-python-sdk"
Repository = "https://github.com/3z/kick-python-sdk"
Issues = "https://github.com/3z/kick-python-sdk/issues"
